# ByteBite

./: .gitignore  README.md  USER_STORIES.md  main.py  openapi.json  pyproject.toml
.continue/rules/: english-code-comments.md
.github/workflows/: bytebite-test.yml
src/Application/DTO/: ShoppingListItem.py  Token.py
src/Application/Service/: AuthService.py
src/Application/UseCase/: CreateIngredientUseCase.py  CreateMealPlan.py  CreateRecipeUseCase.py  DeleteIngredientUseCase.py  DeleteRecipeUseCase.py  GenerateShoppingList.py  GetIngredientByIdUseCase.py  GetMealPlanByIdUseCase.py  GetRecipeByIdUseCase.py  GetRecipesUseCase.py  ListIngredientsUseCase.py  ListMealPlansUseCase.py  LoginUseCase.py  RegisterUseCase.py  UpdateIngredientUseCase.py  UpdateRecipeUseCase.py
src/Domain/Entity/: Ingredient.py  MealPlan.py  Recipe.py  User.py
src/Domain/Repository/: IngredientRepository.py  MealPlanRepository.py  MongoUserRepository.py  RecipeRepository.py  UserRepository.py
src/Domain/ValueObject/: Category.py  IngredientQuantity.py  Unit.py
src/Infrastructure/Configs/: Settings.py
src/Infrastructure/DependencyInjection/: MongoProviders.py  SecurityProviders.py
src/Infrastructure/Persistence/: MongoClient.py  MongoIngredientRepository.py  MongoMealPlanRepository.py  MongoRecipeRepository.py
tests/Unit/: test_create_ingredient.py  test_create_meal_plan_use_case.py  test_generate_shopping_list.py  test_get_meal_plan_by_id_use_case.py  test_ingredient_crud_use_cases.py  test_list_meal_plans_use_case.py  test_login_use_case.py  test_recipe_crud_use_cases.py  test_recipe_domain.py  test_recipe_schemas.py  test_register_use_case.py
(+16 files in other folders)
