[project]
name = "bytebite"
version = "0.1.0"
description = "Recipes App with Clean Architecture"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "motor>=3.6.0",
    "pyjwt[crypto]>=2.9.0",
    "bcrypt==4.0.1",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "certifi>=2024.8.30"
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"